# school-programs

Chess/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  Square.cpp  Square.h
Directed Graph + Algorithms/: csv.scala  graph.scala  path.scala
Directed Graph + Algorithms/Algorithms/: README.md  Table  branch.scala  dyn.scala  genetic.scala  greed.scala  mst.scala
Project_Euler/: P57.py  P64.py  README.md
